test: test for the solve-lcls function (not written yet)